<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:background="#FFFFFF">

    <LinearLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_alignParentTop="true">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/logo_haui"
            android:background="#FFFFFF"
            android:padding="5dp"
            android:scaleType="fitCenter"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tieu_de_cai_dat"
            android:textColor="#000000"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnDong"
            android:layout_width="60dp"
            android:layout_height="48dp"
            android:background="@drawable/bg_button_vien_tron"
            android:text="X"
            android:textColor="#FFFFFF"
            android:textSize="20dp"
            android:textStyle="bold" />
    </LinearLayout>

    <View
        android:id="@+id/divider1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="#000000"
        android:layout_below="@id/headerLayout"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <Button
            android:id="@+id/btnCheDoSangToi"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/btn_sang_toi"
            android:background="@drawable/bg_button_vien_tron"
            android:textColor="#FFFFFF" android:textSize="18sp"
            android:layout_marginBottom="20dp"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/btnDoiNgonNgu"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/btn_ngon_ngu"
            android:background="@drawable/bg_button_vien_tron"
            android:textColor="#FFFFFF" android:textSize="18sp"
            android:layout_marginBottom="20dp"
            android:textAllCaps="false"/>
    </LinearLayout>

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@id/footerLayout"
        android:layout_marginBottom="10dp"
        android:background="#000000"/>

    <RelativeLayout
        android:id="@+id/footerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/btnTrangChu"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/nav_trang_chu"
            android:background="@drawable/bg_button_vien_tron"
            app:backgroundTint="#555555"
            android:textColor="#FFFFFF"
            android:layout_alignParentStart="true"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/btnCaiDat"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/nav_cai_dat"
            android:background="@drawable/bg_button_vien_tron"
            android:textColor="#FFFFFF"
            android:layout_alignParentEnd="true"
            android:textAllCaps="false"/>
    </RelativeLayout>
</RelativeLayout>